# pico_winc_driver

./: .gitignore  CMakeLists.txt  README.md  buildflash.sh  conf_winc.h  main.c  test.sh  test_sim.sh
config/: conf_simulator.h  conf_winc.h
docs/: hif_documentation.md  interrupt_driven_architecture.md  pico_winc1500_driver_architecture.md  pico_winc1500_register_map.md  pico_winc1500_spi_protocol.md
driver/: winc_driver_app.c  winc_driver_app.h
host_drv/: conf_winc.h
host_drv/bsp/include/: nm_bsp_internal.h
host_drv/bsp/source/: nm_bsp_pico.c
host_drv/bus_wrapper/include/: nm_bus_wrapper.h
host_drv/bus_wrapper/source/: nm_bus_wrapper_pico.c
host_drv/common/include/: nm_common.h  nm_debug.h
host_drv/common/source/: nm_common.c
host_drv/driver/include/: m2m_ota.h  m2m_wifi.h
host_drv/driver/source/: m2m_hif.c  m2m_ssl.c  m2m_wifi.c  nmasic.c  nmbus.c  nmdrv.c  nmspi.c
host_drv/pico_hal/: compiler.h
host_drv_19_3_0/: conf_winc.h
host_drv_19_3_0/bsp/include/: nm_bsp_internal.h  nm_bsp_pico.h
host_drv_19_3_0/bsp/source/: nm_bsp_pico.c
host_drv_19_3_0/bus_wrapper/source/: nm_bus_wrapper_pico.c
host_drv_19_3_0/common/include/: nm_debug.h
host_drv_19_3_0/driver/include/: m2m_types.h  m2m_wifi.h
host_drv_19_3_0/driver/source/: m2m_hif.c  nmbus.c  nmdrv.c
host_drv_19_3_0/socket/source/: socket.c
host_drv_19_7_7/: compiler.h
host_drv_19_7_7/bsp/include/: nm_bsp_internal.h  nm_bsp_pico.h
host_drv_19_7_7/bus_wrapper/include/: nm_bus_wrapper.h
host_drv_19_7_7/common/include/: nm_common.h  nm_debug.h
host_drv_19_7_7/common/source/: nm_common.c
host_drv_19_7_7/driver/include/: m2m_wifi.h
host_drv_19_7_7/driver/source/: m2m_hif.c  m2m_wifi.c  nmasic.c  nmbus.c  nmdrv.c  nmspi.c
iot/http/: http_client.c  http_client.h  http_entity.h
pico_spi_master_slave/: CMakeLists.txt
pico_spi_master_slave/src/: CMakeLists.txt  main.c
pico_winc1500_docs/: pico_winc1500_spi_protocol.md
pico_winc_simulator/: CMakeLists.txt  conf_pico_winc_simulator.h  lwipopts.h  main.c  pico_sdk_import.cmake  pio_spi.c  pio_spi.h  sim_log.c  sim_log.h  spi_slave.pio  winc1500_registers.h  winc_callback_manager.c  winc_callback_manager.h  winc_dma.c  winc_dma.h  winc_hif.c  winc_hif.h  winc_simulator_app.c  winc_simulator_app.h  winc_spi_slave.pio  winc_spi_slave_dual.pio  winc_spi_slave_dual_v2.pio  winc_spi_slave_dual_v3.pio  winc_wifi_drv.c  winc_wifi_drv.h
src/: main_combined_app.c  main_driver_only.c  main_simulator_only.c
